--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -135,7 +135,10 @@
 					<input id="register-user" class="register-user" type="text" name="username" placeholder="Username" required minlength="3" maxlength="15" pattern="^(?=.*\d)(?=.*[a-z])(?!.*\s).*$" title="Please include at least 1 number"/>
 					<input id="register-pass" class="register-pass" type="text" name="password" placeholder="Password" required data-value-missing="This field is required!"/>
 					<input id="register-submit" class="register-submit" type="submit" value="Sign Up"/>
-					<div class="register-login"> Already registered? <a id="register-login-click" href="/login"> Login </a> </div>
+					<div class="register-login"> 
+						<h3> Already registered? </h3>
+						<a id="register-login-click" href="/login"> Login </a> 
+					</div>
 					<!-- <input id="register-passConf" class="register-passConf" type="text" name="passwordConf" placeholder="Confirm password" required data-value-missing="This field is required!"/> -->
 				</form>
 			</figcaption>
