--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -1047,6 +1047,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	font-weight: normal;
 	/*padding: 5px 0px 5px 0px;*/
 	text-align: center;
+	margin-bottom: 2px;
 }
 
 .register-submit {
@@ -1088,7 +1089,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	font-weight: bold;
 	font-family: 'Thasadith', sans-serif;
 	margin: 0;
-	margin-top: 3px;
+	margin-top: 2px;
 }
 
 #register-login-click {
