--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -1045,12 +1045,12 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 
 .register-form input[type="text"]::placeholder {
 	color: white;
-	font-size: 14px;
+	font-size: 13px;
 	font-family: 'Thasadith', sans-serif;
 	font-weight: normal;
 	/*padding: 5px 0px 5px 0px;*/
 	text-align: center;
-	margin-bottom: 2px;
+	margin-top: 5px;
 }
 
 .register-submit {
@@ -1062,8 +1062,8 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	font-size: 13px;
 	font-weight: bolder;
 	font-family: 'Thasadith', sans-serif;
-	width: 85%;
-	height: 25px;
+	width: 90%;
+	height: 30px;
 	margin: 5px;
 	border: solid white 1px;
 	cursor: pointer;
@@ -1074,10 +1074,10 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	display: inline-block;
 	background-color: transparent;
 	color: white;
-	font-size: 14px;
+	font-size: 13px;
 	font-weight: bold;
 	font-family: 'Thasadith', sans-serif;
-	width: 85%;
+	width: 90%;
 	height: 25px;
 	margin: 5px;
 	border: solid white 1px;
@@ -1088,7 +1088,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 .register-login h3 {
 	display: inline-block;
 	color: white;
-	font-size: 14px;
+	font-size: 13px;
 	font-weight: bold;
 	font-family: 'Thasadith', sans-serif;
 	margin: 0;
