--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -129,6 +129,7 @@
 				</h3>
 			</div>
 			<img class="third-img" src="/images/fabian-mardi-607722-unsplash.jpg" alt="SF Pink Flower"/>
+			<figcaption>
 				<form class="register-form" method="POST" action="/">
 					<input id="register-email" class="register-email" type="text" name="email" placeholder="Email" required data-value-missing="This field is required!" pattern="^([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22))*\x40([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d))*$" title="Email must include an @"/>
 					<input id="register-user" class="register-user" type="text" name="username" placeholder="Username" required minlength="3" maxlength="15" pattern="^(?=.*\d)(?=.*[a-z])(?!.*\s).*$" title="Please include at least 1 number"/>
@@ -140,6 +141,7 @@
 					</div>
 					<!-- <input id="register-passConf" class="register-passConf" type="text" name="passwordConf" placeholder="Confirm password" required data-value-missing="This field is required!"/> -->
 				</form>
+			</figcaption>
 		</figure>
 		<footer class="footer-home">
 		</footer>
