--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -137,12 +137,10 @@ body, html {
 	border: 0;
 	padding: 5px 0px 10px 0px;
 	background-color: #86ACDE;
+	color: white;
 }
 
-input:focus, textarea:focus {
-    /** outline: none; For Safari, etc **/
-    border: 1px solid white; /** For Firefox **/
-}
+
 
 input[type="text"].searchBar-Input::placeholder {
 	color: white;
@@ -288,11 +286,12 @@ input[type="text"].searchBar-Input::placeholder {
 	border: 0;
 	padding: 5px 0px 10px 0px;
 	background-color: #86ACDE;
+	color: white;
 }
 
-input:focus, textarea:focus {
-    outline: none; /** For Safari, etc **/
-    border: solid white 0px; /** For Firefox **/
+input:focus.newSetName-Input, textarea:focus.newSetName-Input {
+	outline: none; /** For Safari, etc **/
+    border: solid white 1px; /** For Firefox **/
     text-align: left;
     color: white;
 }
@@ -981,7 +980,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 .logOn-register-msg {
 	color: white;
 	text-align: center;
-	font-family: 'Thasadith', 'Montserrat';
+	font-family: 'Dosis', 'Montserrat';
 	font-size: 18px;
 	font-weight: bolder;
 	margin: 0;
@@ -1020,6 +1019,16 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	text-align: center;
 }
 
+input:focus.register-email, textarea:focus.register-email, 
+input:focus.register-user, textarea:focus.register-user,
+input:focus.register-pass, textarea:focus.register-pass {
+	outline: none; /** For Safari, etc **/
+    border: solid white 1px; /** For Firefox **/
+    text-align: center;
+    color: white;
+    font-family: 'Dosis', 'Montserrat';
+}
+
 .register-email {
 	-webkit-appearance: none;
 	-moz-appearance: none;
@@ -1051,11 +1060,12 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 .register-form input[type="text"]::placeholder {
 	color: white;
 	font-size: 13px;
-	font-family: 'Thasadith', sans-serif;
+	font-family: 'Dosis', sans-serif;
 	font-weight: normal;
 	/*padding: 5px 0px 5px 0px;*/
 	text-align: center;
 	margin-top: 5px;
+	border-radius: 2px;
 }
 
 .register-submit {
@@ -1066,7 +1076,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	color: white;
 	font-size: 13px;
 	font-weight: bolder;
-	font-family: 'Thasadith', sans-serif;
+	font-family: 'Dosis', sans-serif;
 	width: 89%;
 	height: 30px;
 	margin: 5px;
@@ -1082,7 +1092,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	color: white;
 	font-size: 13px;
 	font-weight: bold;
-	font-family: 'Thasadith', sans-serif;
+	font-family: 'Dosis', sans-serif;
 	width: 89%;
 	height: 25px;
 	margin: 5px;
@@ -1097,7 +1107,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	color: white;
 	font-size: 13px;
 	font-weight: bold;
-	font-family: 'Thasadith', sans-serif;
+	font-family: 'Dosis', sans-serif;
 	margin: 0;
 	margin-top: 2px;
 }
@@ -1124,7 +1134,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 .flash-Msg {
 	color: white;
 	font-size: 16px;
-	font-family: 'Thasadith', sans-serif;
+	font-family: 'Dosis', sans-serif;
 	font-weight: bolder;
 }
 
@@ -1283,6 +1293,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	border: solid white 1px;
 	color: white;
 	text-align: center;
+	border-radius: 2px;
 }
 
 .login-pass-header {
@@ -1296,11 +1307,12 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	border: solid white 1px;
 	color: white;
 	text-align: center;
+	border-radius: 2px;
 }
 
 .login-form-header input[type="text"]::placeholder {
 	color: white;
-	font-size: 14px;
+	font-size: 13px;
 	font-family: 'Thasadith', sans-serif;
 	font-weight: normal;
 	/*padding: 5px 0px 5px 0px;*/
@@ -1312,10 +1324,10 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	appearance: none;
 	background-color: red;
 	color: white;
-	font-size: 14px;
+	font-size: 13px;
 	font-weight: bolder;
 	font-family: 'Thasadith', sans-serif;
-	width: 66%;
+	width: 69%;
 	height: 45px;
 	margin: 5px;
 	border: solid white 1px;
