--- a/views/pages/flashcardAppIndex.ejs
+++ b/views/pages/flashcardAppIndex.ejs
@@ -94,7 +94,7 @@
 					 */
 
 					e.addEventListener('click', function() {
-						location.assign('/sets/' + regExpConv(e.innerText));
+						location.assign('/' + regExpConv(e.innerText));
 					});				
 				});			
 			});
@@ -125,7 +125,7 @@
 							</a>
 						</div>
 						<div class="sideNavBar">
-							<div class="sideNavBar-a" href="">
+							<div class="sideNavBar-a">
 								<button class="dropbtn" id="newSet-menu"> <i class="fas fa-bars"></i> </button>
 							</div>
 						</div>
