index/router.js tweaks and fixes

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -35,7 +35,7 @@
 					</div>
 				</div>
 			</header>
-			<img class="first-img" src="/images/janko-ferlic-174927-unsplash.jpg" alt="Tam background with cargo ship"/>
+			<img class="first-img" src="/images/janko-ferlic-174927-unsplash.jpg" alt="Library n lights"/>
 			<div class="home-img-div">
 				<h2 class="home-img-text">
 					Effortless UI design <br> granting learners a peaceful <br> approach to studying.
@@ -48,11 +48,11 @@
 			</div>	
 		</div>
 		<figure class="inner-container-1">
-			<img class="second-img" src="/images/joanna-kosinska-470407-unsplash.jpg" alt="SF Pink Flower"/> 
+			<img class="second-img" src="/images/joanna-kosinska-470407-unsplash.jpg" alt="Tea n books nom sayin"/> 
 			<div class="home-img-div-1">
 				<figcaption class="home-logOn-explain-div-1">
 					<h3 class="home-logOn-explain-1">
-						Study new vocabulary, new ideas, or concepts.. 
+						Study new vocabulary, new ideas, or concepts 
 					</h3>
 					<div class="home-img-separator">
 					</div>
@@ -128,9 +128,9 @@
 					Sign up for a free account today !
 				</h3>
 			</div>
-			<img class="third-img" src="/images/fabian-mardi-607722-unsplash.jpg" alt="SF Pink Flower"/>
+			<img class="third-img" src="/images/fabian-mardi-607722-unsplash.jpg" alt="Colorful origami"/>
 			<figcaption>
-				<form class="register-form" method="POST" action="/">
+				<form class="register-form" method="POST" action="/signup">
 					<input id="register-email" class="register-email" type="text" name="email" placeholder="Email" required data-value-missing="This field is required!" pattern="^([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22))*\x40([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d))*$" title="Email must include an @"/>
 					<input id="register-user" class="register-user" type="text" name="username" placeholder="Username" required minlength="3" maxlength="15" pattern="^(?=.*\d)(?=.*[a-z])(?!.*\s).*$" title="Please include at least 1 number"/>
 					<input id="register-pass" class="register-pass" type="text" name="password" placeholder="Password" required data-value-missing="This field is required!"/>
