Fixed /logout route that didn't delete current session

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -15,7 +15,7 @@
 			<header class="headerActivityPage-home">
 				<div class="header">
 					<div class="nameOfSite">
-						<a class="nameOfSite-a" href="/flashHome"> 
+						<a class="nameOfSite-a" href="/"> 
 							<h1 class="nameOfSite-h1"> FlashPass </h1>
 						</a>
 					</div>
@@ -52,14 +52,14 @@
 			<div class="home-img-div-1">
 				<figcaption class="home-logOn-explain-div-1">
 					<h3 class="home-logOn-explain-1">
-						Study new vocabulary, new ideas, or concepts 
+						Study new vocabulary, new ideas, or concepts.
 					</h3>
 					<div class="home-img-separator">
 					</div>
 				</figcaption>
 				<figcaption class="home-logOn-explain-div">
 					<h3 class="home-logOn-register">
-						Generate flashcard sets of your own accord <br> or discover heplful sets from others.
+						Generate flashcard sets of your own accord <br> or discover helpful sets from others.
 					</h3>
 				
 				</figcaption>
@@ -125,7 +125,7 @@
 		<figure class="inner-container-3">
 			<div class="home-logOn-div-bottom">
 				<h3 class="logOn-register-msg">
-					Sign up for a free account today !
+					Sign up for a free account today!
 				</h3>
 			</div>
 			<img class="third-img" src="/images/fabian-mardi-607722-unsplash.jpg" alt="Colorful origami"/>
