--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -144,6 +144,9 @@
 			</figcaption>
 		</figure>
 		<footer class="footer-home">
+			<div class="copyright-div">
+				<span class="copyright-info"> © FlashPass / All Rights Reserved </span>
+			</div>
 		</footer>
 	</div>
 </body>
