--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -135,7 +135,7 @@ body, html {
 .searchBar-Input {
 	width: 100%;
 	border: 0;
-	padding: 5px 0px 10px 0px;
+	/*padding: 5px 0px 10px 0px;*/
 	background-color: #86ACDE;
 	color: white;
 }
@@ -285,7 +285,6 @@ input[type="text"].searchBar-Input::placeholder {
 .newSetName-Input {
 	width: 100%;
 	border: 0;
-	padding: 5px 0px 10px 0px;
 	background-color: #86ACDE;
 	color: white;
 }
@@ -330,15 +329,19 @@ input[type="text"].newSetName-Input::placeholder {
 }
 
 .Term-Definition {
-	
+	width: 100%;
 }
 
 .Term {
-	display: inline-block;
+	display: inline-flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
 	margin: 15px;
 }
 
 .newCard-Term {
+	-webkit-appearance: none;
+	-moz-appearance: none;
 	border: 0;
 	border-bottom: solid white 2px;
 	font-family: 'Dosis', sans-serif;
@@ -353,11 +356,15 @@ input[type="text"].newSetName-Input::placeholder {
 }
 
 .Definition {
-	display: inline-block;
+	display: inline-flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
 	margin: 15px;	
 }
 
 .newCard-Definition {
+	-webkit-appearance: none;
+	-moz-appearance: none;
 	border: 0;
 	border-bottom: solid white 2px;
 	font-family: 'Dosis', sans-serif;
@@ -420,18 +427,6 @@ input[type="text"].newSetName-Input::placeholder {
 
 /*
 	THE CSS BELOW IS INTENDED FOR USE WITHIN THE FILENAME "flashcardAppCreateNewSet-success.ejs"
-	
-	<!--
-		<table>
-			<% for(var key in data) { %>
-				<tr>
-					<td> <%= key %> </td>
-					<td> <%= data[key] %> </td>
-				</tr>
-			<% } %>
-		</table>
-	-->
-
 */
 
 .div-setName {
@@ -1356,7 +1351,23 @@ input:focus.register-pass, textarea:focus.register-pass {
 
 .footer-home {
 	width: 100%;
-	height: 400px;
+	height: 100px;
+}
+
+.copyright-div {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	margin: 20px;
+	margin-top: 50px;
+}
+
+.copyright-info {
+	font-family: 'Dosis', 'Montserrat';
+	font-size: 16px;
+	font-weight: bold; 
+	color: white;
 }
 
 .error {
@@ -1388,6 +1399,15 @@ figure {
 	}
 
 	.Definition-home {
+		width: 39%;
+	}
+
+	.Term {
+		width: 39%;
+		margin-right: 21px;
+	}
+
+	.Definition {
 		width: 39%;
 	}
 
