--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -345,6 +345,7 @@ input[type="text"].newSetName-Input::placeholder {
 	-moz-appearance: none;
 	border: 0;
 	border-bottom: solid white 2px;
+	border-radius: 0;
 	font-family: 'Dosis', sans-serif;
 	background-color: transparent;
 	color: white;
@@ -368,6 +369,7 @@ input[type="text"].newSetName-Input::placeholder {
 	-moz-appearance: none;
 	border: 0;
 	border-bottom: solid white 2px;
+	border-radius: 0;
 	font-family: 'Dosis', sans-serif;
 	background-color: transparent;
 	color: white;
