--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -35,7 +35,7 @@
 							</a>
 						</div>
 						<div class="sideNavBar">
-							<div class="sideNavBar-a" href="">
+							<div class="sideNavBar-a">
 								<button class="dropbtn" id="newSet-menu"> <i class="fas fa-bars"></i> </button>
 							</div>
 						</div>
