--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -129,13 +129,14 @@ body, html {
 }
 
 .searchBar-inDiv {
-	border-bottom: solid #2F4F4F 2px;
+	border-bottom: solid white 2px;
 }
 
 .searchBar-Input {
 	width: 100%;
 	border: 0;
-	/*padding: 5px 0px 10px 0px;*/
+	padding: 10px;
+	padding-left: 0;
 	background-color: #86ACDE;
 	color: white;
 }
@@ -287,7 +288,8 @@ input[type="text"].searchBar-Input::placeholder {
 	border: 0;
 	background-color: #86ACDE;
 	color: white;
-	padding-bottom: 10px;
+	padding: 10px;
+	padding-left: 0;
 }
 
 input:focus.newSetName-Input, textarea:focus.newSetName-Input {
