--- a/views/pages/flashcardAppCreateNewSet-success.ejs
+++ b/views/pages/flashcardAppCreateNewSet-success.ejs
@@ -59,8 +59,8 @@
 				*/
 
 				function createCardArray(key, value) {
-					for(let i = 0; i < key.length; i += 2) {
-						let tempArray = [];
+					for(var i = 0; i < key.length; i += 2) {
+						var tempArray = [];
 						tempArray.push(value[i]);
 						tempArray.push(value[i + 1]);
 
