--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -135,7 +135,7 @@ body, html {
 .searchBar-Input {
 	width: 100%;
 	border: 0;
-	padding: 10px;
+	padding: 5px;
 	padding-left: 0;
 	background-color: #86ACDE;
 	color: white;
@@ -146,7 +146,8 @@ body, html {
 input[type="text"].searchBar-Input::placeholder {
 	color: white;
 	font-family: 'Dosis', sans-serif;
-	font-size: 16px;
+	font-size: 14px;
+	padding: 5px 5px 5px 0;
 }
 
 .container-2 {
@@ -288,7 +289,7 @@ input[type="text"].searchBar-Input::placeholder {
 	border: 0;
 	background-color: #86ACDE;
 	color: white;
-	padding: 10px;
+	padding: 5px;
 	padding-left: 0;
 }
 
@@ -302,7 +303,8 @@ input:focus.newSetName-Input, textarea:focus.newSetName-Input {
 input[type="text"].newSetName-Input::placeholder {
 	color: white;
 	font-family: 'Dosis', sans-serif;
-	font-size: 15px;
+	font-size: 14px;
+	padding: 5px 5px 5px 0;
 }
 
 .container-flashCreate-2 {
@@ -502,6 +504,13 @@ input[type="text"].newSetName-Input::placeholder {
 /* back, initially hidden pane */
 .back {
 	transform: rotateY(180deg);
+}
+
+.frontCard, .backCard {
+	color: white;
+	text-align: center;
+	font-size: 24px;
+	margin-top: 100px;
 }
 
 .cardButtons {
@@ -932,6 +941,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	color: white;
 	text-align: center;
 	font-size: 24px;
+	font-family: 'Dosis', 'Montserrat';
 	margin-top: 100px;
 }
 
