--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -147,7 +147,8 @@ input[type="text"].searchBar-Input::placeholder {
 	color: white;
 	font-family: 'Dosis', sans-serif;
 	font-size: 14px;
-	padding: 5px 5px 5px 0;
+	padding: 5px;
+	padding-left: 0;
 }
 
 .container-2 {
