--- a/views/pages/flashcardAppCreateNewSet-success.ejs
+++ b/views/pages/flashcardAppCreateNewSet-success.ejs
@@ -44,6 +44,7 @@
 					keyValue_array: []
 				};
 
+				console.log(Object.keys(flipData.strData));
 				console.log(flipData.key_data());
 				console.log(flipData.value_data());
 				/*
@@ -150,7 +151,6 @@
 			</header>
 			<div class="div-setName">
 				<h3 class="setName-inSuccessPage"> <%= setData.setName %> </h3>
-				<%= setData %>
 			</div>
 			<div class="flip-container">
 				<div class="flipper">
